--- a/webapps/glaf/WEB-INF/conf/jdbc.properties
+++ b/webapps/glaf/WEB-INF/conf/jdbc.properties
@@ -1,9 +1,19 @@
-jdbc.driver=org.h2.Driver
-jdbc.url=jdbc:h2:tcp://127.0.0.1/glafdb
-jdbc.user=sa
+
+jdbc.url=jdbc:mysql://127.0.0.1:13388/glaf_crowd?useUnicode=true&autoReconnect=true&characterEncoding=utf8&serverTimezone=UTC&verifyServerCertificate=false
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.user=root
 jdbc.name=default
-jdbc.password=
-jdbc.type=h2
+jdbc.password=rootXYZ2018AJK!@#
+jdbc.type=mysql
+jdbc.autocommit=true
+
+
+#jdbc.driver=org.h2.Driver
+#jdbc.url=jdbc:h2:tcp://127.0.0.1/glafdb
+#jdbc.user=sa
+#jdbc.name=default
+#jdbc.password=
+#jdbc.type=h2
 
 
 #jdbc.provider=com.glaf.core.jdbc.connection.C3P0ConnectionProvider
