--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
 		<dependency>
 			<groupId>com.aliyun</groupId>
 			<artifactId>aliyun-java-sdk-core</artifactId>
-			<version>4.0.6</version>
+			<version>4.0.8</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aliyun</groupId>
@@ -907,7 +907,7 @@
 		<dependency>
 			<groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.28.Final</version>
+            <version>4.1.29.Final</version>
 		</dependency>
 		<!-- 任务调度框架 -->
 		<dependency>
@@ -1001,7 +1001,7 @@
 		<dependency>
 			<groupId>net.oschina.j2cache</groupId>
 			<artifactId>j2cache-core</artifactId>
-			<version>2.3.22-release</version>
+			<version>2.5.3-release</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jxls</groupId>
@@ -1029,9 +1029,9 @@
 			<version>1.0.6</version>
 		</dependency>
 		<dependency>
-			<groupId>jfree</groupId>
+			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
-			<version>1.0.13</version>
+			<version>1.0.19</version>
 		</dependency>
 		<dependency>
 			<groupId>com.belerweb</groupId>
