--- a/.classpath
+++ b/.classpath
@@ -180,5 +180,10 @@
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/consul-api.jar"/>
 	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/imgscalr-lib.jar"/>
+	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/byte-buddy.jar"/>
+	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/jai-imageio-core.jar"/>
+	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/jsqlparser.jar"/>
+	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/zxing-core.jar"/>
+	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/zxing-java.jar"/>
 	<classpathentry kind="output" path="webapps/glaf/WEB-INF/classes"/>
 </classpath>
