--- a/pom.xml
+++ b/pom.xml
@@ -1054,15 +1054,20 @@
 			<version>3.11.0</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.flowable</groupId>
-		    <artifactId>flowable-engine</artifactId>
-		    <version>6.3.1</version>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.3</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>com.highcharts.export</groupId>
-			<artifactId>highcharts-export-convert</artifactId>
-			<version>2.1.0</version>
-		</dependency> -->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+			<version>1.72</version>
+		</dependency>
 		<!-- glaf 工具包 -->
 	</dependencies>
 	<build>
