--- a/.classpath
+++ b/.classpath
@@ -177,5 +177,7 @@
 	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/jsqlparser.jar"/>
 	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/zxing-core.jar"/>
 	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/lib/zxing-java.jar"/>
+	<classpathentry kind="lib" path="webapps/glaf/WEB-INF/conf"/>
+	<classpathentry kind="lib" path="tomcat/lib/mysql-connector-java.jar"/>
 	<classpathentry kind="output" path="webapps/glaf/WEB-INF/classes"/>
 </classpath>
