--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <maven.build.timestamp.format>yyyy-MM-dd hh.mm.ss</maven.build.timestamp.format>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>5.0.8.RELEASE</spring.version>
+		<spring.version>5.1.0.RELEASE</spring.version>
 		<spring.batch.version>3.0.8.RELEASE</spring.batch.version>
 		<poi.version>3.17</poi.version>
 		<jxls.version>1.0.6</jxls.version>
@@ -36,7 +36,7 @@
 		<jackson.version>2.9.5</jackson.version>
 		<codehaus.jackson.version>1.9.13</codehaus.jackson.version>
 		<curator.version>2.12.0</curator.version>
-		<asm.version>3.3.1</asm.version>
+		<asm.version>6.2.1</asm.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -70,22 +70,27 @@
 			<version>1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>asm</groupId>
-			<artifactId>asm-all</artifactId>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-analysis</artifactId>
 			<version>${asm.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>asm</groupId>
+			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm-commons</artifactId>
 			<version>${asm.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>asm</groupId>
+			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm-tree</artifactId>
 			<version>${asm.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>asm</groupId>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-util</artifactId>
+			<version>${asm.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>${asm.version}</version>
 		</dependency>
@@ -284,7 +289,7 @@
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
-			<version>3.2.7</version>
+			<version>3.2.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
@@ -326,7 +331,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.17</version>
+			<version>1.18</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
@@ -437,7 +442,7 @@
 		<dependency>
 			<groupId>org.mvel</groupId>
 			<artifactId>mvel2</artifactId>
-			<version>2.4.0.Final</version>
+			<version>2.4.2.Final</version>
 		</dependency>
 		<!-- 结束JAVA表达式语言工具包 -->
 		<dependency>
