--- a/pom.xml
+++ b/pom.xml
@@ -1083,6 +1083,11 @@
 			<artifactId>jcommander</artifactId>
 			<version>1.72</version>
 		</dependency>
+		<dependency>
+			<groupId>org.xerial</groupId>
+		    <artifactId>sqlite-jdbc</artifactId>
+		    <version>3.25.2</version>
+		</dependency>
 		<!-- glaf 工具包 -->
 	</dependencies>
 	<build>
